# can-i-eat-it

./: .gitignore  BUILD_ANDROID_CAPACITOR.bat  BUILD_EXE_TAURI.bat  EXPORT_BACKEND_JSON.bat  EXPORT_PUBLIC_GITHUB_JSON.bat  LANCER_BACKEND_SQLITE.bat  LANCER_WEB.bat  LANCER_WEB_AVEC_BACKEND.bat  README.md  TESTS_MOTEUR.bat  capacitor.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vite.config.ts
docs/: NEXT_STEPS.md  SAFETY.md  V10_SERVER_ASSISTANT.md  V11_ADVANCED_OCR.md  V12_MENU_TRANSLATION.md  V4_GUIDED_LEARNING.md  V5_RESTAURANT_COCKPIT.md  V6_COMMUNITY_DATABASE.md  V7_MODERATION_QUALITY.md  V8_RESTAURANT_INTELLIGENCE.md  V9_SAFE_ORDER_MODE.md
public/: manifest.webmanifest  sw.js
server/: README.md  dev.mjs  schema.sql  server.mjs
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/data/: dishes.ts  ingredients.ts  profiles.ts  rules.ts
src/engine/: advancedOcr.test.ts  advancedOcr.ts  backendClient.ts  camera.ts  community.test.ts  community.ts  compatibility.test.ts  compatibility.ts  export.ts  learning.test.ts  learning.ts  menuParser.test.ts  menuParser.ts  menuTranslation.test.ts  menuTranslation.ts  ocr.ts  openFoodFacts.ts  pwa.ts  recommendations.test.ts  recommendations.ts  restaurantIntelligence.test.ts  restaurantIntelligence.ts  safeOrder.test.ts  safeOrder.ts  serverAssistant.test.ts  serverAssistant.ts  storage.ts  text.ts
