[package]
name = "can-i-eat-it"
version = "1.1.0"
description = "Can I Eat It desktop shell"
authors = ["Darknigthmare"]
edition = "2021"

[lib]
name = "can_i_eat_it_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
